# pyconpl-2022

./: .gitignore  README.md  pyproject.toml
examples/: driver.py  login_sandbox.py  long_api_call.py  long_api_call_cdp.py  server.py
slides/: index.html
slides/images/: login_sandbox.mkv
