[tool.poetry]
name = "pyconpl-2022"
version = "0.1.0"
description = ""
authors = ["Tomasz Wrona <tomasz.wrona@globalapptesting.com>"]
readme = "README.md"
packages = [
    {include = "*.py", from = "examples"}
]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.2.2"
selenium = "^4.5.0"
trio = "^0.22.0"
flask = "^2.2.2"
requests = "^2.28.1"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
